--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
           <meta charset="utf-8">
           <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
           <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
-        <title itemprop="name">Website Title</title><link rel="icon" type="image/png" href="https://raw.githubusercontent.com/Loopple/loopple-public-assets/main/sites/favicon.png"><link rel="canonical" href=".loopple.com"><meta name="twitter:card" content="summary" />
+        <title itemprop="name">Pillow Boxes: Their Benefits and Usage</title><link rel="icon" type="image/png" href="https://raw.githubusercontent.com/Loopple/loopple-public-assets/main/sites/favicon.png"><link rel="canonical" href="indiview.loopple.com"><meta name="twitter:card" content="summary" />
       <meta name="twitter:card" content="summary_large_image">
-      <meta name="twitter:site" content=".loopple.com" />
-      <meta name="twitter:creator" content=".loopple.com" />
-      <meta name="twitter:title" content="Website Title" />
+      <meta name="twitter:site" content="indiview.loopple.com" />
+      <meta name="twitter:creator" content="indiview.loopple.com" />
+      <meta name="twitter:title" content="Pillow Boxes: Their Benefits and Usage" />
       <meta name="twitter:description" content="Website Description" />
       <meta name="twitter:image" content="" />
-      <meta name="twitter:url" content=".loopple.com" /><meta name="description" content="Website Description">
-        <meta property="og:title" content="Website Title">
-        <meta property="og:url" content=".loopple.com">
+      <meta name="twitter:url" content="indiview.loopple.com" /><meta name="description" content="Website Description">
+        <meta property="og:title" content="Pillow Boxes: Their Benefits and Usage">
+        <meta property="og:url" content="indiview.loopple.com">
         <meta property="og:image" content="">
         <meta property="og:description" content="Website Description"><link href="https://cdn.jsdelivr.net/gh/Loopple/loopple-public-assets@main/sites/css/sites.min.css" rel="stylesheet"><link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Open+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet"></head><body><div class="page-header min-vh-100 align-items-center" style="background-image: url(&quot;&quot;);">    <span class="bg-dark mask opacity-6"></span>    <div class="container py-7 py-lg-0">      <div class="row">        <div class="col-md-6 mx-auto">          <div class="card card-body bg-transparent shadow-none">            <h1 class="text-white text-center display-3 mb-4 animate__animated animate__fadeIn animate__faster">Our App is Live!</h1>            <p class="text-white text-center opacity-9 animate__animated animate__fadeIn animate__fast">Although brilliant, there have been occasions where the dimensions of the photo did not quite fit with the aesthetic of the story. Maybe the photo was too square. Maybe it had too much height and not enough width.</p>            <div class="buttons text-center mt-5 animate__animated animate__fadeIn animate__fast">                                       </div>                      </div>        </div>      </div>    </div>  </div><div class="border border-gray text-xxs px-2 py-1 position-fixed end-3 bottom-3 border-radius-md px-2 text-xs font-weight-bold text-dark badge-pill bg-white z-index-2 d-flex align-items-center">
           <a href="https://www.loopple.com/sites" target="_blank">Made with</a>
